--- a/css/main.css
+++ b/css/main.css
@@ -10,3 +10,34 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+main {
+  display: grid;
+  grid-template-columns: 30vmin 15vmin 30vmin;
+  grid-template-rows: 10vmin 10vmin 30vmin  15vmin;
+
+}
+
+main * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main button {
+  grid-column: span 3;
+}
+
+button {
+  margin: 2vmin;
+}
+
+#p-result, #c-result {
+    border: 3vmin solid white;
+    border-radius: 5vmin;
+
+}
+
+#p-result img, #c-result img {
+  width: 100%;
+}
